# FlintCoreTesting

./: .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  sprt.yml
flintcoretest/: __init__.py  engine_runner.py  perft_cases.py  sprt.py
flintcoretest/data/: sprt_openings.epd
scripts/: build_engine.py  run_sprt.py
tests/: conftest.py  test_bench.py  test_perft.py  test_sprt_stats.py  test_uci.py
